manifests/developer-hub/infra-setup/minio/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: backstage
spec:
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: http
    - port: 9090
      targetPort: 9090
      protocol: TCP
      name: webui
  selector:
    app: minio
  type: ClusterIP
