manifests/developer-hub/infra-setup/minio/minio-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio-api
  namespace: backstage
spec:
  to:
    kind: Service
    name: minio-service
  port:
    targetPort: http
  tls:
    termination: edge
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio-webui
  namespace: backstage
spec:
  to:
    kind: Service
    name: minio-service
  port:
    targetPort: webui
  tls:
    termination: edge
